--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  background: linear-gradient(to right, #fafafa, #2c9c3e);
+  background: linear-gradient(to bottom right, #fafafa, #2c9c3e);
 }
 
 .container {
