--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
   font-family: 'Open Sans', sans-serif;
   background: linear-gradient(to bottom right, #fafafa, #2c9c3e);
-  background-size: 100% 100%
-  background-attachment: fixed;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 .container {
