--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  background: linear-gradient(to bottom right, #fafafa, #2c9c3e);
+  background: rgb(66,143,47);
+  background: linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
   background-position: 0 0;
   background-repeat: no-repeat;
   height: 100vh;
