--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
   font-family: 'Open Sans', sans-serif;
   background: rgb(66,143,47);
+  background: -moz-linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
+  background: -webkit-linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
   background: linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#428f2f",endColorstr="#4291ff",GradientType=1);
   background-position: 0 0;
   background-repeat: no-repeat;
   height: 100vh;
