--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 15px;
+  color: #90ee90
 }
 
 .subtitle {
@@ -38,7 +39,7 @@ body {
 }
 
 .scroll-btn {
-  background-color: #4CAF50;
+  background-color: #428f2f;
   border: none;
   color: white;
   padding: 10px 20px;
@@ -51,7 +52,7 @@ body {
 }
 
 .scroll-btn:hover {
-  background-color: #3e8e41;
+  background-color: #2e6a20;
 }
 
 .section-content {
