--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Verdana', Verdana Regular;
   background: rgb(66,143,47);
   background: -moz-linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
   background: -webkit-linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
