--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Verdana', Verdana Regular;
+  font-family: Verdana, Arial, sans-serif;
   background: rgb(66,143,47);
   background: -moz-linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
   background: -webkit-linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
@@ -16,6 +16,7 @@ body {
 }
 
 .title {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 15px;
