--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ body {
   height: 100vh;
 }
 
+.reddit-mono-<"general font"> {
+  font-family: "Reddit Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: <400>;
+  font-style: normal;
+}
+
 .container {
   max-width: 800px;
   margin: 0 auto;
