--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .title {
-  font-family: Reddit Mono, monospace;
+  font-family: general font;
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 15px;
