--- a/style.css
+++ b/style.css
@@ -1,20 +1,13 @@
 body {
   font-family: Verdana, Arial, sans-serif;
-  background: rgb(66,143,47);
-  background: -moz-linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
-  background: -webkit-linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
-  background: linear-gradient(349deg, rgba(66,143,47,1) 1%, rgba(145,191,137,1) 25%, rgba(66,145,255,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#428f2f",endColorstr="#4291ff",GradientType=1);
+  background: rgb(32,45,106);
+  background: -moz-linear-gradient(145deg, rgba(32,45,106,1) 1%, rgba(169,137,191,1) 43%, rgba(66,145,255,1) 80%);
+  background: -webkit-linear-gradient(145deg, rgba(32,45,106,1) 1%, rgba(169,137,191,1) 43%, rgba(66,145,255,1) 80%);
+  background: linear-gradient(145deg, rgba(32,45,106,1) 1%, rgba(169,137,191,1) 43%, rgba(66,145,255,1) 80%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#202d6a",endColorstr="#4291ff",GradientType=1);
   background-position: 0 0;
   background-repeat: no-repeat;
   height: 100vh;
-}
-
-.reddit-mono-<"general font"> {
-  font-family: "Reddit Mono", monospace;
-  font-optical-sizing: auto;
-  font-weight: <400>;
-  font-style: normal;
 }
 
 .container {
@@ -23,11 +16,12 @@ body {
 }
 
 .title {
-  font-family: general font;
+  font-family: 'Reddit Mono', monospace;
+  font-weight: 400
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 15px;
-  color: #90ee90
+  color: #
 }
 
 .subtitle {
