--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 .title {
   font-family: 'Reddit Mono', monospace;
-  font-weight: 400
+  font-weight: normal
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 15px;
