--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
   font-family: Verdana, Arial, sans-serif;
-  background: rgb(32,45,106);
-  background: -moz-linear-gradient(145deg, rgba(32,45,106,1) 1%, rgba(169,137,191,1) 43%, rgba(66,145,255,1) 80%);
-  background: -webkit-linear-gradient(145deg, rgba(32,45,106,1) 1%, rgba(169,137,191,1) 43%, rgba(66,145,255,1) 80%);
-  background: linear-gradient(145deg, rgba(32,45,106,1) 1%, rgba(169,137,191,1) 43%, rgba(66,145,255,1) 80%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#202d6a",endColorstr="#4291ff",GradientType=1);
+  background: rgb(0,2,158);
+  background: -moz-linear-gradient(162deg, rgba(0,2,158,1) 21%, rgba(128,46,184,1) 48%, rgba(0,2,158,1) 76%);
+  background: -webkit-linear-gradient(162deg, rgba(0,2,158,1) 21%, rgba(128,46,184,1) 48%, rgba(0,2,158,1) 76%);
+  background: linear-gradient(162deg, rgba(0,2,158,1) 21%, rgba(128,46,184,1) 48%, rgba(0,2,158,1) 76%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#00029e",endColorstr="#00029e",GradientType=1);
   background-position: 0 0;
   background-repeat: no-repeat;
   height: 100vh;
@@ -17,11 +17,11 @@ body {
 
 .title {
   font-family: 'Reddit Mono', monospace;
-  font-weight: normal
+  font-weight: normal;
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 15px;
-  color: #
+  color: ##802eb8
 }
 
 .subtitle {
