--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ body {
   text-align: center;
   font-size: 2.5em;
   margin-bottom: 15px;
-  color: #802eb8;
+  color: #ffffff;
+  position: fixed;
+  top: 0;
 }
 
 .subtitle {
