--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   font-weight: normal;
   text-align: center;
   font-size: 2.5em;
+  margin-top: 0px;
   margin-bottom: 15px;
   color: #010302;
   position: fixed;
