--- a/style.css
+++ b/style.css
@@ -20,14 +20,14 @@ body {
   font-weight: normal;
   text-align: center;
   font-size: 2.5em;
-  margin-top: 0px;
+  margin-top: -10px;
   margin-bottom: 15px;
   color: #010302;
   position: fixed;
   top: 0;
-  left: auto;
-  transform: translateX(-31%);
-  width: 110vw;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 150vw;
   background-color: #ffffff;
   padding: 10px 20px;
   position: relative;
