--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body {
 .section-content h2 {
   font-size: 1.8em;
   margin-bottom: 10px;
+  color:#ddd;
 }
 
 .version-indicator {
@@ -110,4 +111,4 @@ body {
   color: #ffffff;  
 }
 
-/* Version 1.2.58 /*
+/* Version 1.2.59 /*
