--- a/style.css
+++ b/style.css
@@ -27,11 +27,10 @@ body {
   z-index: 1;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
-  width: 150vw;
+  margin: 0 auto;
+  width: 100vw;
   background-color: #ffffff;
   padding: 10px 20px;
-  position: relative;
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -111,4 +110,4 @@ body {
   color: #ffffff;  
 }
 
-/* Version 1.2.59 /*
+/* Version 1.2.60 /*
