--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   margin-bottom: 15px;
   color: #010302;
   position: sticky;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 50%;
   margin: 0 auto;
@@ -101,6 +101,12 @@ body {
   background-color: #ffffffbb;
 }
 
+.content-container {
+  
+  margin-top: -50px;
+  z-index: 1;
+}
+
 .section-content {
   margin-bottom: 30px;
   padding: 20px;
@@ -120,4 +126,4 @@ body {
   color: #ffffff;  
 }
 
-/* Version 1.2.67 /*
+/* Version 1.2.68 /*
