--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@ body {
 }
 
 .content-container {
-  
+  background-color: white;
+  padding: 20px;
   margin-top: -50px;
   z-index: 1;
 }
@@ -126,4 +127,4 @@ body {
   color: #ffffff;  
 }
 
-/* Version 1.2.68 /*
+/* Version 1.2.69 */
