--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@ body {
   font-weight: normal;
   text-align: center;
   font-size: 1.2em;
-  margin-top: 50px;
-  margin-bottom: 15px;
+  margin-top: 100px;
+  margin-bottom: 100px;
   color: #ffffff
 }
 
@@ -110,6 +110,7 @@ body {
 
 .section-content {
   margin-bottom: 30px;
+  background-color: #ffffff;
   padding: 20px;
   border: 1px solid #ddd;
 }
@@ -127,4 +128,4 @@ body {
   color: #ffffff;  
 }
 
-/* Version 1.2.69 */
+/* Version 1.2.70 */
