--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ body {
   color: #010302;
   position: sticky;
   z-index: 2;
-  top: 0;
-  left: 50%;
+  top: -5px;
+  left: -5px 50%;
   margin: 0 auto;
   width: 100vw;
   background-color: #ffffff;
@@ -128,4 +128,4 @@ body {
   color: #ffffff;  
 }
 
-/* Version 1.2.70 */
+/* Version 1.2.71 */
