--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {
 }
 
 .section-content h2 {
+  font-family: 'Reddit Mono', monospace;
   font-size: 1.8em;
   margin-bottom: 10px;
   color:rgb(0, 0, 0);
@@ -128,4 +129,4 @@ body {
   color: #ffffff;  
 }
 
-/* Version 1.2.73 */
+/* Version 1.2.74 */
